Feature: Complete practice 5

--- a/practice_3/test_website/slider.html
+++ b/practice_3/test_website/slider.html
@@ -17,7 +17,18 @@
 		<main class="center column">
 			<article>
 				<h1>Slider</h1>
-				<p></p>
+				<div class="slider-container">
+					<button id="toggle-slider-btn">Show</button>
+					<button id="toggle-inerval-btn">Start</button>
+					<div class="slider-wrapper">
+						<div id="slider"></div>
+						<div id="pagination"></div>
+						<div class="btn-container">
+							<button id="prev-btn">Prev</button>
+							<button id="next-btn">Next</button>
+						</div>
+					</div>
+				</div>
 			</article>
 		</main>
 		<nav class="left column">
@@ -43,6 +54,8 @@
 			<img class="logo" src="./assets/img/logo.png">
 		</footer>
 	</div>
+
+	<script src="./assets/js/script.js"></script>
 </body>
 
 </html>
